# puff

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  build.rs  readme.md
.github/workflows/: release.yaml  test.yaml
bench/: asgi_app.py  bench_server.rs  graphql_bench_common.py  graphql_post.lua  integration_asgi_app.py  integration_wsgi_app.py  profile_graphql_pg_vs_strawberry.sh  profile_graphql_vs_strawberry.sh  profile_stack.sh  puff_asgi_bench.toml  puff_bench.toml  puff_graphql_bench.toml  puff_graphql_bench_schema.py  puff_graphql_pg_bench.toml  puff_graphql_pg_bench_schema.py  puff_integration_asgi.toml  puff_integration_wsgi.toml  run_bench.sh  strawberry_graphql_bench_schema.py  strawberry_graphql_pg_bench_schema.py  wsgi_app.py
bench/results/20260319T154909Z_wsgi/: baseline.txt  combo.txt  pg.txt  redis.txt
book/: CLI.md  Deepstack.md  Django.md  FastAPI.md  Flask.md  RPC.md
docs/superpowers/plans/: 2026-03-17-puff-v2-agent-runtime.md
docs/superpowers/specs/: 2026-03-17-puff-agentic-runtime-design.md  2026-03-19-agent-sandboxing-design.md
examples/: asgi.notyet  asgi.rs  basic.rs  fast_api_example.py  fastapi_example.py  flask_example.py  gql.rs  graphql_python.py  puff.pold.py  puff.py  puff.toml  puff_django.rs  pytest.rs  task_queue.rs  task_queue_example.py  web.rs  websockets.rs  wsgi.rs
examples/agent_skills/github/: context.md  skill.toml
examples/psycopg2/: __init__.py  errorcodes.py  extensions.py  extras.py
examples/puff/: __init__.py  graphql.py  postgres.py
examples/puff/contrib/django/: management.py  static.py
examples/puff/contrib/django/postgres/: base.py  client.py  features.py  schema.py
examples/puff/django/postgres/: base.py  creation.py  introspection.py  operations.py
examples/puff_django_example/: manage.py  pytest.ini
examples/puff_django_example/polls/: tests.py
examples/puff_django_example/puff_django_example/: asgi.py  settings.py  urls.py  wsgi.py
examples/python_tests/: test_agents.py  test_gql.py  test_http.py  test_postgres.py  test_pubsub.py  test_redis.py  test_task_queue.py
puff_py/puff/: __init__.py  audit.py  cron.py  graphql.py  migrations.py  model.py  postgres.py  tools.py  webhooks.py
skills/puff-agent/: context.md  skill.toml
src/: context.rs  errors.rs  lib.rs  main.rs  prelude.rs  rand.rs  supervision.rs  watch.rs
src/agents/: agent.rs  budget.rs  capabilities.rs  conversation.rs  error.rs  eval.rs  graphql_tool.rs  llm.rs  mailbox.rs  memory.rs  mod.rs  orchestration.rs  persistence.rs  provider.rs  python_bindings.rs  python_tools.rs  quota.rs  registry.rs  registry_tool.rs  runtime.rs  sandbox.rs  server.rs  skill.rs  streaming.rs  tool.rs  trace.rs  wasm.rs
src/channels/: mod.rs  mpsc.rs  oneshot.rs
src/databases/: mod.rs  postgres.rs  pubsub.rs  redis.rs
src/graphql/: fast_serialize.rs  handlers.rs  mod.rs  puff_schema.rs  query_cache.rs  row_return.rs  scalar.rs  schema.rs
src/json/: error.rs  mod.rs
src/program/: mod.rs
src/program/commands/: agent.rs  asgi.rs  django_management.rs  doctor.rs  http.rs  mod.rs  new_project.rs  pytest.rs  python.rs  wsgi.rs
src/python/: async_python.rs  graphql.rs  greenlet.rs  mod.rs  postgres.rs  pubsub.rs  queue.rs  redis.rs
src/python/asgi/: handler.rs  mod.rs
src/python/wsgi/: handler.rs  mod.rs
src/runtime/: dispatcher.rs  mod.rs  runner.rs  shutdown.rs  wormhole.rs
src/tasks/: dispatcher.rs  mod.rs  runner.rs  task.rs
src/types/: bytes_builder.rs  map.rs  map_builder.rs  mod.rs  text.rs  text_builder.rs  vector.rs  vector_builder.rs
src/web/: client.rs  http.rs  mod.rs  server.rs
