[package]
name = "puff-rs"
version = "0.1.0"
description = "Puff - Deep Stack Python Runtime and GraphQL library."
license = "MIT"
edition = "2021"
rust-version = "1.62"
authors = ["Kyle Hanson <me@khanson.io>"]
documentation = "https://docs.rs/puff_rs"
homepage = "https://github.com/hansonkd/puff"
repository = "https://github.com/hansonkd/puff"
readme = "README.md"
categories = ["asynchronous", "web-programming", "web-programming::http-server", "python"]
keywords = ["graphql", "server", "web", "python"]
exclude = ["/release.toml"]


[dependencies]
futures = "0.3.23"
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
rand = "0.8.1"
num_cpus = "1.13.1"
lazy_static = "1.4.0"
tower-service = "0.3.2"
axum = {version="0.6.0-rc.2", features=["headers", "ws"]}
futures-util = "0.3.24"
compact_str = {version = "0.6.1", features=["serde"]}
hyper = "0.14.9"
clap = {version = "4.0.8", features = ["env", "string"]}
anyhow = "1.0.64"
serde_json = "1.0.85"
owning_ref = "0.4.1"
chrono = {version = "0.4.22", features = ["serde"]}
serde = {version = "1.0.144", features=["derive"]}
serde_bytes = "0.11.7"
reqwest = "0.11.11"
tracing-subscriber = "0.3.15"
percent-encoding = "2.2.0"
pyo3 = "0.16.6"
bb8-redis = "0.11.0"
uuid = {version = "1.1.2", features=["v4", "fast-rng", "serde"]}
bincode = "1.3.3"
tokio-postgres = {version = "0.7.7", features=["with-serde_json-1", "with-chrono-0_4", "with-uuid-1", "array-impls"]}
bb8-postgres = "0.8.1"
pythonize = "0.16.0"
pyo3-chrono = "0.4.0"
#juniper = { version="0.15.10", features=["chrono"] }
#juniper_graphql_ws = { version="0.3.0" }
juniper = { package="juniper_puff", version = "0.16.0-dev", path="../juniper_puff/juniper", features=["chrono", "uuid"] }
juniper_graphql_ws = { package="juniper_graphql_ws_puff", version = "0.4.0-dev", path = "../juniper_puff/juniper_graphql_ws" }
async-trait = "0.1.57"
tokio-stream = "0.1.10"
base64 = "0.13.0"
socket2 = "0.4.4"


[[example]]
name = "web"
path = "examples/web.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "puff_django"
path = "examples/puff_django.rs"

[[example]]
name = "gql"
path = "examples/gql.rs"

[[example]]
name = "websockets"
path = "examples/websockets.rs"


#[profile.release]
#opt-level = 3
#strip = true
#debug = false
#codegen-units = 1
#lto = true