[package]
name = "puff-rs"
version = "0.1.9"
description = "Puff - Deep Stack Python Runtime and GraphQL library."
license = "MIT"
edition = "2021"
rust-version = "1.75"
authors = ["Kyle Hanson <me@khanson.io>"]
documentation = "https://docs.rs/puff_rs"
homepage = "https://github.com/hansonkd/puff"
repository = "https://github.com/hansonkd/puff"
readme = "README.md"
categories = ["asynchronous", "web-programming", "web-programming::http-server", "development-tools::ffi"]
keywords = ["graphql", "server", "web", "python"]
exclude = ["/release.toml"]


[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
rand = "0.8"
num_cpus = "1"
lazy_static = "1"
tower-service = "0.3"
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
compact_str = { version = "0.8", features = ["serde"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
clap = { version = "4", features = ["env", "string"] }
anyhow = "1"
serde_json = "1"
owning_ref = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
reqwest = { version = "0.12", features = ["json", "cookies", "multipart", "brotli", "gzip"] }
tracing-subscriber = "0.3"
percent-encoding = "2"
pyo3 = { version = "0.24", features = ["chrono", "py-clone", "macros"] }
bb8-redis = "0.18"
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
bincode = "1"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1", "array-impls"] }
bb8-postgres = "0.9"
pythonize = "0.24"
juniper = { package = "juniper_puff", version = "0.16.0-dev", features = ["chrono", "uuid"] }
juniper_graphql_ws = { package = "juniper_graphql_ws_puff", version = "0.4.0-dev" }
async-trait = "0.1"
tokio-stream = "0.1"
base64 = "0.22"
socket2 = { version = "0.5", features = ["all"] }
thiserror = "2"
tower-http = { version = "0.6", features = ["compression-full", "cors"], optional = true }
tower = { version = "0.5", optional = true }
tower-layer = "0.3"
toml = { version = "0.8", optional = true }
dotenvy = { version = "0.15", optional = true }
notify = { version = "7", optional = true }

[features]
puff-binary = ["toml", "dotenvy", "tower-http", "tower"]
watch-binary = ["notify"]
default = ["watch-binary", "puff-binary"]

[[bin]]
name = "puff"
path = "src/main.rs"
required-features = ["puff-binary"]

[[bin]]
name = "puff-watch"
path = "src/watch.rs"
required-features = ["watch-binary"]

[[example]]
name = "web"
path = "examples/web.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "puff_django"
path = "examples/puff_django.rs"

[[example]]
name = "gql"
path = "examples/gql.rs"

[[example]]
name = "websockets"
path = "examples/websockets.rs"

[[example]]
name = "asgi"
path = "examples/asgi.rs"

[[example]]
name = "task_queue"
path = "examples/task_queue.rs"

[[example]]
name = "pytest"
path = "examples/pytest.rs"
